--- a/go/import.go.tmpl
+++ b/go/import.go.tmpl
@@ -4,7 +4,7 @@ package main
 
 import (
 	flutter "github.com/go-flutter-desktop/go-flutter"
-	systray "github.com/sonr-io/systray/go"
+	systray "github.com/jackstefansky/systray/go"
 )
 
 func init() {
